* [**] Fix issue where trashing a post converted it to Classic content. [#16367]
* [*] Comments can be filtered to show the most recent unreplied comments from other users. [#16215]
* [*] Fixed the background color of search fields. [#16365]
* [*] Fixed the navigation bar color in dark mode. [#16348]

17.2
-----

* [*] Fixed an issue where some author display names weren't visible for self-hosted sites. [#16297]
* [***] Updated custom app icons. [#16261]
* [**] Removed Site Switcher in the Editor
* [*] a11y: Bug fix: Allow stepper cell to be selected by screenreader [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3362]
* [*] Image block: Improve text entry for long alt text. [https://github.com/WordPress/gutenberg/pull/29670]
* [***] New Block: Jetpack contact info. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3340]

17.1
-----

* [*] Reordered categories in page layout picker [#16156]
* [*] Added preview device mode selector in the page layout previews [#16141]
* [***] Block Editor: Improved the accessibility of range and step-type block settings. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3255]
* [**] Block Editor: Added Contact Info block to sites on WPcom or with Jetpack version >= 8.5.
* [**] We updated the app's color scheme with a brighter new blue used throughout. [#16213, #16207]
* [**] We updated the login prologue with brand new content and graphics. [#16159, #16177, #16185, #16187, #16200, #16217, #16219, #16221, #16222]
* [**] We updated the app's color scheme with a brighter new blue used throughout. [#16213, #16207] 
* [**] Updated the app icon to match the new color scheme within the app. [#16220]
* [*] Fixed an issue where some webview navigation bar controls weren't visible. [#16257]

17.0
-----
* [internal] Updated Zendesk to latest version. Should be no functional changes. [#16051]
* [*] Reader: fixed an issue that caused unfollowing external sites to fail. [#16060]